# MarkTab

./: .cursorrules  .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
docs/: openapi.yaml
migrations/: 20240318000001_create_users.sql  20240318000002_create_tokens.sql  20240318000003_create_settings.sql  20240318000004_create_files.sql  20240318000005_create_logs.sql  20240318000006_create_todo_tables.sql  20240318000007_create_poetry_tables.sql  20240318000007_create_weather_tables.sql  20240318000008_create_hotsearch_tables.sql  20240318000008_create_system_metrics.sql  20240318000009_create_backups.sql  20240318000009_create_poetry_tables.sql  20240318000010_create_plugin_status.sql
scripts/: start.sh  wait-for-it.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs
src/controllers/: auth.rs  base.rs  file.rs  health.rs  mod.rs  plugin.rs  todo.rs  user.rs
src/controllers/admin/: backup.rs  log.rs  metrics.rs  mod.rs  plugin.rs  setting.rs  upgrade.rs  user.rs
src/error/: mod.rs
src/middleware/: admin.rs  auth.rs  error.rs  logger.rs  metrics.rs  mod.rs
src/migrations/: mod.rs
src/models/: file.rs  file_test.rs  log.rs  metrics.rs  mod.rs  plugin.rs  setting.rs  setting_test.rs  token.rs  token_test.rs  user.rs  user_test.rs
src/plugins/: mod.rs  mod_test.rs
src/services/: auth.rs  auth_test.rs  backup.rs  file.rs  file_test.rs  logger.rs  mod.rs  static_files.rs  upgrade.rs
src/tests/: mod.rs
src/utils/: mod.rs
tests/: load_test.py  performance.rs
(+25 files in other folders)
