[package]
name = "MARKTAB-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
dotenv = "0.15"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
actix-multipart = "0.6"
md5 = "0.7"
futures = "0.3"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
criterion = "0.4"
tokio = { version = "1.0", features = ["full"] }
actix-web = { version = "4.0", features = ["openssl"] }

[[bench]]
name = "performance"
harness = false 